# Llama_Index

./: .gitignore  README.md  pyproject.toml
llamaindex/: .env  0_barebones_basic.ipynb  1_llamaindex_basics.ipynb  1_llamaindex_basics_recepie.ipynb  2_llamaindex_basics.ipynb  2_structured_data.ipynb  3_llamaindex_guidance.ipynb
llamaindex/research_paper_index/: docstore.json  index_store.json  vector_store.json
