[tool.poetry]
name = "llamaindex"
version = "0.1.0"
description = ""
authors = ["= <=>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
llama-index = "^0.9.7"
langchain = "^0.0.340"
autogen = "^1.0.16"
python-dotenv = "^1.0.0"
pypdf = "^3.17.1"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
